Removed uneeded script. Added code to source the download data script

--- a/time_series_plots.Rmd
+++ b/time_series_plots.Rmd
@@ -1,5 +1,9 @@
 ---
-title: "time_series_plots"
+title: "Visualizations of Raw Time Series Data"
 output: html_document
 ---
+
+```{r}
+source("01_download_data.R")
+```
 
