implemented weather data downloading
1. Moved the code for visualizing the target data that Madeline wrote to the .rmd file

2. Added code to download historical weather data and find daily averages

3. Did the same for weather forecast data

--- a/time_series_plots.Rmd
+++ b/time_series_plots.Rmd
@@ -7,3 +7,11 @@ output: html_document
 source("01_download_data.R")
 ```
 
+
+```{r}
+aquatics_targets |>
+    ggplot(aes(x = datetime, y = observation)) +
+      geom_point(size = .5) +
+      facet_grid(variable~site_id, scales = "free_y") +
+      theme_bw()
+```
