--- a/time_series_plots.Rmd
+++ b/time_series_plots.Rmd
@@ -41,3 +41,35 @@ weather_forecast |>
                  labeller = as_labeller(weather_graph_labels)) +
       theme_bw()
 ```
+
+```{r}
+source("02_download_wq_data.R")  # Load waq_filtered dataset
+```
+
+```{r}
+# Plotting pH values from 0-14
+waq_filtered_clean <- waq_filtered |>
+    filter(daily_pH >= 0, daily_pH <= 14)  # Remove outliers
+
+waq_filtered_clean |>
+    ggplot(aes(x = date, y = daily_pH)) +
+      geom_point(color = "blue", size = .5) +
+      facet_wrap(~siteID, scales = "free_y") +
+      labs(title = "Daily pH Levels",
+           x = "Date",
+           y = "pH Value") +
+      ylim(0, 14) +  # Set y-axis range
+      theme_bw()
+```
+
+```{r}
+# Plotting turbidity values
+waq_filtered |>
+    ggplot(aes(x = date, y = daily_turbidity)) +
+      geom_point(color = "darkgreen", size = .5) +
+      facet_wrap(~siteID, scales = "free_y") +
+      labs(title = "Daily Turbidity Levels",
+           x = "Date",
+           y = "Turbidity (NTU)") +
+      theme_bw()
+```
