--- a/fitting_hist_data_report.Rmd
+++ b/fitting_hist_data_report.Rmd
@@ -19,6 +19,16 @@ These are all our covariates:
   - $Z_{lr, t}$ = Daily mean longwave radiation
   - $Z_{sr, t}$ = Daily mean shortwave radiation
   - $Z_{prec, t}$ = Daily total precipitation flux
+  
+# Set up
+
+```{r}
+library(rjags)
+library(ecoforecastR)
+
+source("01_download_data.R")
+source("02_combine_data.R")
+```
 
 # Null Model(s)
 
@@ -84,10 +94,72 @@ Data model:
 $$ Y_t \sim N(X_t, \tau_\text{obs}) $$
 
 Process model:
-$$ X_{t+1} \sim N(X_t + \beta_0 + \beta_{\text{temp}} Z_{\text{temp}, t} + \beta_{lr}Z_{lr, t} + \beta_{sr}Z_{sr, t} + \beta_{\text{prec}} Z_{\text{prec}, t} + \beta_X X_t, \tau_\text{add}) $$
+$$ X_{t+1} \sim N(X_t + \beta_0 + \beta_{\text{temp}} Z_{\text{temp}, t} + \beta_{\text{prec}} Z_{\text{prec}, t} + \beta_X X_t, \tau_\text{add}) $$
 
 Priors:
 $$ X_1 \sim N(X_{ic}, \tau_{ic}) $$
 $$ \tau_\text{obs} \sim \text{Gamma}(a_\text{obs}, r_\text{obs}) $$
 $$ \tau_\text{add} \sim \text{Gamma}(a_\text{add}, r_\text{add}) $$
+
+
+## Fitting the Model
+
+```{r}
+# set up data object for ecoforecastR
+data <- list(y = cleaned_data$chla,
+             n = length(cleaned_data$chla),      ## data
+             temp = cleaned_data$temperature,
+             longrad = cleaned_data$surface_downwelling_longwave_flux_in_air,
+             shortrad = cleaned_data$surface_downwelling_shortwave_flux_in_air,
+             precip = cleaned_data$precipitation_flux,
+             x_ic=1,tau_ic=100,      ## initial condition prior
+             a_obs=1,r_obs=1,           ## obs error prior
+             a_add=1,r_add=1            ## process error prior
+)
+
+## fit the model
+model2 <- "~ 1 + X + temp + precip"
+ef.out.combined <- ecoforecastR::fit_dlm(model=list(obs="y",fixed=model2),data)
+
+#save(ef.out.combined, file = "combined_factors.RData")
+```
+
+## Parameter Diagnostics
+
+```{r, fig.height=10, fig.width=10}
+#load("combined_factors.RData")
+
+## parameter diagnostics
+params <- window(ef.out.combined$params,start=1000) ## remove burn-in
+plot(params)
+```
+
+```{r}
+summary(params)
+cor(as.matrix(params))
+pairs(as.matrix(params))
+```
+
+## Time-Series Plot
+
+```{r}
+## confidence interval
+time.rng = c(1,nrow(cleaned_data))       ## you can adjust this line to zoom in and out on specific time intervals
+
+out <- as.matrix(ef.out.combined$predict)
+ci <- apply(out,2,quantile,c(0.025,0.5,0.975))
+
+plot(cleaned_data$datetime,ci[2,],type='n',ylim=range(cleaned_data$chla,na.rm=TRUE),
+     #log='y',
+     xlim=cleaned_data$datetime[time.rng],
+     xlab = "Time",
+     ylab = "Chlorophyll-a",
+     main = "Combined Factors Model")
+## adjust x-axis label to be monthly if zoomed
+if(diff(time.rng) < 100){ 
+  axis.Date(1, at=seq(cleaned_data$datetime[time.rng[1]],cleaned_data$datetime[time.rng[2]],by='month'), format = "%Y-%m")
+}
+ecoforecastR::ciEnvelope(cleaned_data$datetime,ci[1,],ci[3,],col=ecoforecastR::col.alpha("lightBlue",0.75))
+points(cleaned_data$datetime, cleaned_data$chla,pch="+",cex=0.5)
+```
 
