--- a/fitting_hist_data_report.Rmd
+++ b/fitting_hist_data_report.Rmd
@@ -45,8 +45,57 @@ $$ X_1 \sim N(X_{ic}, \tau_{ic}) $$
 $$ \tau_\text{obs} \sim \text{Gamma}(a_\text{obs}, r_\text{obs}) $$
 $$ \tau_\text{add} \sim \text{Gamma}(a_\text{add}, r_\text{add}) $$
 
+## Fitting the Model
 
-## Previous Year's Chorophyll-a Model
+```{r}
+source("fit_random_walk.R")
+```
+
+## Diagnostics
+
+
+```{r}
+# Discard burn-in
+rwalk.params <- window(rwalk.jags.out[,1:2], start = 1000)
+
+# Plot and summarize
+plot(rwalk.params)
+summary(rwalk.params)
+cor(as.matrix(rwalk.params))
+pairs(as.matrix(rwalk.params))
+```
+
+# Time Series Plot
+
+```{r}
+## confidence interval
+time.rng = c(1, nrow(cleaned_data))  ## you can adjust this line to zoom in and out on specific time intervals
+
+# Get posterior predictions from the random walk model
+x.cols <- grep("^x",colnames(rwalk.out)) ## grab all columns that start with the letter x
+ci_rwalk <- apply(rwalk.out[,x.cols], 2, quantile, c(0.025, 0.5, 0.975))
+
+# Plot the time series with confidence intervals
+plot(cleaned_data$datetime, ci_rwalk[2,], type='n', ylim=range(cleaned_data$chla, na.rm=TRUE),
+     xlim=cleaned_data$datetime[time.rng],
+     xlab = "Time",
+     ylab = "Chlorophyll-a",
+     main = "Random Walk Model")
+
+# Adjust x-axis label to be monthly if zoomed
+if(diff(time.rng) < 100){ 
+  axis.Date(1, at=seq(cleaned_data$datetime[time.rng[1]], cleaned_data$datetime[time.rng[2]], by='month'), format = "%Y-%m")
+}
+
+# Add the confidence envelope
+ecoforecastR::ciEnvelope(cleaned_data$datetime, ci_rwalk[1,], ci_rwalk[3,], col=ecoforecastR::col.alpha("lightBlue", 0.75))
+
+# Plot the original data points
+points(cleaned_data$datetime, cleaned_data$chla, pch="+", cex=0.5)
+```
+
+
+## Previous Year's Chlorophyll-a Model
 
 
 Data model:
@@ -60,6 +109,54 @@ $$ X_1 \sim N(X_{ic}, \tau_{ic}) $$
 $$ \tau_\text{obs} \sim \text{Gamma}(a_\text{obs}, r_\text{obs}) $$
 $$ \tau_\text{add} \sim \text{Gamma}(a_\text{add}, r_\text{add}) $$
 
+## Fitting the Model
+
+```{r}
+source("fit_previous_year_model.R")
+```
+
+## Diagnostics
+
+
+```{r}
+# Discard burn-in
+pyear.params <- window(pyear.jags.out[,1:2], start = 1000)
+
+# Plot and summarize
+plot(pyear.params)
+summary(pyear.params)
+cor(as.matrix(pyear.params))
+pairs(as.matrix(pyear.params))
+```
+
+# Time Series Plot
+
+```{r}
+## confidence interval
+time.rng = c(1, nrow(cleaned_data))  ## you can adjust this line to zoom in and out on specific time intervals
+
+# Get posterior predictions from the random walk model
+x.cols <- grep("^x",colnames(pyear.out)) ## grab all columns that start with the letter x
+ci_pyear <- apply(pyear.out[,x.cols], 2, quantile, c(0.025, 0.5, 0.975))
+
+# Plot the time series with confidence intervals
+plot(cleaned_data$datetime, ci_pyear[2,], type='n', ylim=range(cleaned_data$chla, na.rm=TRUE),
+     xlim=cleaned_data$datetime[time.rng],
+     xlab = "Time",
+     ylab = "Chlorophyll-a",
+     main = "Previous Year's Chlorophyll-A Model")
+
+# Adjust x-axis label to be monthly if zoomed
+if(diff(time.rng) < 100){ 
+  axis.Date(1, at=seq(cleaned_data$datetime[time.rng[1]], cleaned_data$datetime[time.rng[2]], by='month'), format = "%Y-%m")
+}
+
+# Add the confidence envelope
+ecoforecastR::ciEnvelope(cleaned_data$datetime, ci_pyear[1,], ci_pyear[3,], col=ecoforecastR::col.alpha("lightBlue", 0.75))
+
+# Plot the original data points
+points(cleaned_data$datetime, cleaned_data$chla, pch="+", cex=0.5)
+```
 
 # Internal Factors Model
 
