--- a/fitting_hist_data_report.Rmd
+++ b/fitting_hist_data_report.Rmd
@@ -22,7 +22,7 @@ These are all our covariates:
   
 # Set up
 
-```{r}
+```{r echo = T, results = 'hide'}
 library(rjags)
 library(ecoforecastR)
 
@@ -172,6 +172,54 @@ $$ X_1 \sim N(X_{ic}, \tau_{ic}) $$
 $$ \tau_\text{obs} \sim \text{Gamma}(a_\text{obs}, r_\text{obs}) $$
 $$ \tau_\text{add} \sim \text{Gamma}(a_\text{add}, r_\text{add}) $$
 
+## Fitting the Model
+
+
+```{r}
+internal_model <- ecoforecastR::fit_dlm(model = list(obs = "chla", fixed = "1 + X + oxygen + daily_pH + daily_turbidity"), cleaned_data)
+#names(internal.model)
+
+```
+
+## Parameter Diagnostics
+
+```{r, fig.height=10, fig.width=10}
+## parameter diagnostics
+params_internal <- window(internal_model$params,start=1000) ## remove burn-in
+plot(params_internal)
+
+cor(as.matrix(params_internal))
+pairs(as.matrix(params_internal))
+summary(params_internal)
+```
+
+## Time Series Plot
+
+```{r}
+time.rng = c(1,nrow(cleaned_data))       ## you can adjust this line to zoom in and out on specific time intervals
+
+out <- as.matrix(internal_model$predict)
+ci <- apply(out,2,quantile,c(0.025,0.5,0.975))
+
+plot(cleaned_data$datetime,ci[2,],type='n',ylim=range(cleaned_data$chla,na.rm=TRUE),
+     #log='y',
+     xlim=cleaned_data$datetime[time.rng],
+     xlab = "Time",
+     ylab = "Chlorophyll-a",
+     main = "Internal Factors Model")
+## adjust x-axis label to be monthly if zoomed
+if(diff(time.rng) < 100){ 
+  axis.Date(1, at=seq(cleaned_data$datetime[time.rng[1]],cleaned_data$datetime[time.rng[2]],by='month'), format = "%Y-%m")
+}
+ecoforecastR::ciEnvelope(cleaned_data$datetime,ci[1,],ci[3,],col=ecoforecastR::col.alpha("lightBlue",0.75))
+points(cleaned_data$datetime, cleaned_data$chla,pch="+",cex=0.5)
+cor(as.matrix(params_internal))
+
+```
+
+
+
+
 # External Factors Model
 
 Data model:
@@ -216,7 +264,7 @@ ef.out.external <- ecoforecastR::fit_dlm(
 ## Diagnostics
 
 
-```{r}
+```{r, fig.height=10, fig.width=10}
 # Discard burn-in
 params_external <- window(ef.out.external$params, start = 1000)
 
@@ -224,7 +272,7 @@ params_external <- window(ef.out.external$params, start = 1000)
 plot(params_external)
 summary(params_external)
 cor(as.matrix(params_external))
-pairs(as.matrix(params))
+pairs(as.matrix(params_external))
 ```
 
 # Time Series Plot
@@ -330,48 +378,5 @@ if(diff(time.rng) < 100){
 }
 ecoforecastR::ciEnvelope(cleaned_data$datetime,ci[1,],ci[3,],col=ecoforecastR::col.alpha("lightBlue",0.75))
 points(cleaned_data$datetime, cleaned_data$chla,pch="+",cex=0.5)
-cor(as.matrix(params))
 ```
 
-<<<<<<< HEAD
-### Internal Model: dissolved xygen, pH, turbidity
-
-```{r}
-internal_model <- ecoforecastR::fit_dlm(model = list(obs = "chla", fixed = "1 + X + oxygen + daily_pH + daily_turbidity"), cleaned_data)
-names(internal.model)
-
-```
-```{r}
-## parameter diagnostics
-params_internal <- window(internal_model$params,start=1000) ## remove burn-in
-plot(params_internal)
-
-cor(as.matrix(params_internal))
-pairs(as.matrix(params_internal))
-summary(params_internal)
-```
-
-```{r}
-time.rng = c(1,nrow(cleaned_data))       ## you can adjust this line to zoom in and out on specific time intervals
-
-out <- as.matrix(internal_model$predict)
-ci <- apply(out,2,quantile,c(0.025,0.5,0.975))
-
-plot(cleaned_data$datetime,ci[2,],type='n',ylim=range(cleaned_data$chla,na.rm=TRUE),
-     #log='y',
-     xlim=cleaned_data$datetime[time.rng],
-     xlab = "Time",
-     ylab = "Chlorophyll-a",
-     main = "Internal Factors Model")
-## adjust x-axis label to be monthly if zoomed
-if(diff(time.rng) < 100){ 
-  axis.Date(1, at=seq(cleaned_data$datetime[time.rng[1]],cleaned_data$datetime[time.rng[2]],by='month'), format = "%Y-%m")
-}
-ecoforecastR::ciEnvelope(cleaned_data$datetime,ci[1,],ci[3,],col=ecoforecastR::col.alpha("lightBlue",0.75))
-points(cleaned_data$datetime, cleaned_data$chla,pch="+",cex=0.5)
-cor(as.matrix(params_internal))
-
-```
-=======
-
->>>>>>> a15441030c85b76c6348a8631d7f47873cb73539
