--- a/fitting_hist_data_report.Rmd
+++ b/fitting_hist_data_report.Rmd
@@ -26,8 +26,7 @@ These are all our covariates:
 library(rjags)
 library(ecoforecastR)
 
-source("01_download_data.R")
-source("02_combine_data.R")
+load("cleaned_data.RData")
 ```
 
 # Null Model(s)
@@ -326,14 +325,18 @@ This model can be re-fit by sourcing the script "03_fit_combined_model.R"
 ## Parameter Diagnostics
 
 ```{r}
-#TODO: add gelman plots 
+load("combined_factors.RData")
+
+gelman.diag(ef.out.combined$params)
+
+BGR <- gelman.plot(ef.out.combined$params)
 ```
 
 ```{r, fig.height=10, fig.width=10}
-load("combined_factors.RData")
+# Load in params with removed burnin
+load("combined_factors_noburnin.RData")
 
 ## parameter diagnostics
-params <- window(ef.out.combined$params,start=1000) ## remove burn-in
 plot(params)
 ```
 
