--- a/fitting_hist_data_report.Rmd
+++ b/fitting_hist_data_report.Rmd
@@ -356,7 +356,7 @@ pairs(as.matrix(params))
 ## confidence interval
 time.rng = c(1,nrow(cleaned_data))       ## you can adjust this line to zoom in and out on specific time intervals
 
-out <- as.matrix(ef.out.combined$predict)
+out <- as.matrix(predict)
 ci <- apply(out,2,quantile,c(0.025,0.5,0.975))
 
 plot(cleaned_data$datetime,ci[2,],type='n',ylim=range(cleaned_data$chla,na.rm=TRUE),
