--- a/forecast_and_uncertainty_analysis.Rmd
+++ b/forecast_and_uncertainty_analysis.Rmd
@@ -8,9 +8,10 @@ date: "`r Sys.Date()`"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Setup
+<!--- NOTE: Run `Main.R` in order to generate the files needed to knit this document --->
 
-Note, you will need to run 03_fit_combined_model.R before knitting this so that combined_factors.RData exists. Don't try to commit combined_factors.RData to github! It is too large
+
+# Setup
 
 ```{r}
 library(tidyverse)
@@ -24,34 +25,51 @@ load("weather_forecast.RData")
 
 # Run forecast
 
+## Set up
+
 ```{r}
-#sample rows from mcmc chain to run foreward in time
+forecastN <- function(IC,
+                      Nmc,
+                      Betaintercept,
+                      Betatemp,
+                      Betaprecip,
+                      BetaX,
+                      temperature,
+                      precipitation,
+                      tau_add_inv,
+                      NT = 30){
+  N <- matrix(NA,Nmc,NT)  ## storage
+  Nprev <- IC           ## initialize
+  
+  for(tt in 1:NT){
+    ## calculate mean
+    mu = Nprev + Betaintercept + Betatemp*temperature[tt] + Betaprecip*precipitation[tt] + BetaX*Nprev   
+    N[,tt] <- rnorm(Nmc,mu,tau_add_inv)                         ## predict next step
+    Nprev <- N[,tt]                                  ## update IC
+  }
+  return(N)
+}
+```
+
+```{r}
 Nmc = 1000         ## set number of Monte Carlo draws
+predict_matrix <- as.matrix(predict)
+
+#sample rows from mcmc chain to run foreward in time
 prow = sample.int(nrow(as.matrix(params)), Nmc, replace = TRUE)
 
-#initialize variables
-N <- matrix(NA,Nmc,30)  ## storage
-predict_matrix <- as.matrix(predict)
-Nprev <- predict_matrix[prow, ncol(predict_matrix)]## initialize
-
-#set parameters
+## Set up parameters
 param_matrix <- as.matrix(params)
-Betatemp <- param_matrix[prow, "betatemp"]
-Betaprecip <- param_matrix[prow, "betaprecip"]
-BetaX <- param_matrix[prow, "betaX"]
-Betaintercept <- param_matrix[prow, "betaIntercept"]
-tau_add <- param_matrix[prow, "tau_add"]
+param.mean <- apply(param_matrix,2,mean) # Find mean parameter values 
 
-#find driver values
+#find driver values TODO: fix this
 weather_forecast_cleaned <- weather_forecast %>%
   pivot_wider(
     names_from = variable,  # Use the variable.y column to create new columns
     values_from = daily_val  # Use the daily_val column for the values
   )
 precipitation <- weather_forecast_cleaned$precipitation_flux[-1] #remove 1st so dates line up
-temperature <- weather_forecast_cleaned$air_temperature[-1] #remove 1st so dates line up
 
-#### OR if using water temp
 dates <-  as.Date(cleaned_data$datetime)
 forecast_dates <- seq.Date(from = tail(dates, 1) + 1, by = "day", length.out = 30)
 dates <- c(dates, forecast_dates)
@@ -59,30 +77,82 @@ dates <- c(dates, forecast_dates)
 forecast_dates_minus1 <- as_datetime(forecast_dates) - years(1)
 temperature <- cleaned_data$temperature[which(cleaned_data$datetime %in% forecast_dates_minus1)]
 
+```
 
-#Run ensemble
-for(t in 1:30){
-  mu = Nprev + Betaintercept + Betatemp*temperature[t] + Betaprecip*precipitation[t] + BetaX*Nprev   ## calculate mean
-  N[,t] <- rnorm(Nmc,mu,tau_add)                         ## predict next step
-  Nprev <- N[,t]                                  ## update IC
-}
+
+## Initial Condition Uncertainty
+
+```{r}
+# Sample initial conditions
+IC <- predict_matrix[prow, ncol(predict_matrix)]
+
+N.ic <- forecastN(IC,
+                Nmc,
+                param.mean["betaIntercept"],
+                param.mean["betatemp"],
+                param.mean["betaprecip"],
+                param.mean["betaX"],
+                temperature,
+                precipitation,
+                0)
+
+```
+
+## Parameter Uncertainty
+
+```{r}
+# Sample parameter values
+Betatemp.sample <- param_matrix[prow, "betatemp"]
+Betaprecip.sample <- param_matrix[prow, "betaprecip"]
+BetaX.sample <- param_matrix[prow, "betaX"]
+Betaintercept.sample <- param_matrix[prow, "betaIntercept"]
+tau_add.sample <- param_matrix[prow, "tau_add"]
+
+
+N.ic.p <- forecastN(IC,
+                Nmc,
+                Betaintercept.sample,
+                Betatemp.sample,
+                Betaprecip.sample,
+                BetaX.sample,
+                temperature,
+                precipitation,
+                0)
+```
+
+## Driver Uncertainty
+
+```{r}
 
 ```
 
 
-# Initial Plot
+## Process Uncertainty
+
+# Plot
 
 ```{r}
-time.rng = c(2500,nrow(cleaned_data)+30)       ## you can adjust this line to zoom in and out on specific time intervals
+## you can adjust this line to zoom in and out on specific time intervals
+time.rng = c(2600,nrow(cleaned_data)+30)  
 
+## You can adjust this line to adjust the y-axis zoom
+#y.rng <- range(cleaned_data$chla,na.rm=TRUE)
+y.rng <- c(0,5)
+
+
+## Plot historical fit data
 out <- predict_matrix
 ci <- apply(out,2,quantile,c(0.025,0.5,0.975))
 
 # Time interval set up
 dates <-  as.Date(cleaned_data$datetime)
 dates <- c(dates, seq.Date(from = tail(dates, 1) + 1, by = "day", length.out = 30))
+```
 
-plot(dates, 1:length(dates) ,type='n',ylim=range(cleaned_data$chla,na.rm=TRUE),
+
+```{r}
+plot(dates, 1:length(dates) ,type='n',
+     ylim = y.rng,
      #log='y',
      xlim=dates[time.rng],
      xlab = "Time",
@@ -95,9 +165,22 @@ plot(dates, 1:length(dates) ,type='n',ylim=range(cleaned_data$chla,na.rm=TRUE),
 ecoforecastR::ciEnvelope(as.Date(cleaned_data$datetime),ci[1,],ci[3,],col=ecoforecastR::col.alpha("lightBlue",0.75))
 points(as.Date(cleaned_data$datetime), cleaned_data$chla,pch="+",cex=0.5)
 
-# adding the forcast on
-N.ci = apply(N,2,quantile,c(0.025,0.5,0.975))
-ecoforecastR::ciEnvelope(tail(dates, 30),N.ci[1,],N.ci[3,],col= "green")#col.alpha(N.cols[1],trans))
+
+
+
+## Add forecast and uncertainties
+N.ic.ci = apply(N.ic,2,quantile,c(0.025,0.5,0.975))
+N.ic.p.ci = apply(N.ic.p,2,quantile,c(0.025,0.5,0.975))
+
+ecoforecastR::ciEnvelope(tail(dates, 30),N.ic.p.ci[1,],N.ic.p.ci[3,],col= "red")
+ecoforecastR::ciEnvelope(tail(dates, 30),N.ic.ci[1,],N.ic.ci[3,],col= "green")
+
+
 lines(tail(dates, 30),N.ci[2,],lwd=0.5)
 
+
+
+#N.I.ci = apply(N.I,2,quantile,c(0.025,0.5,0.975))
+#ecoforecastR::ciEnvelope(time2,N.I.ci[1,],N.I.ci[3,],col=col.alpha(N.cols[1],trans))
+#lines(time2,N.I.ci[2,],lwd=0.5)
 ```
