--- a/forecast_and_uncertainty_analysis.Rmd
+++ b/forecast_and_uncertainty_analysis.Rmd
@@ -288,7 +288,7 @@ plot(dates, 1:length(dates) ,type='n',
      xlim=dates[time.rng],
      xlab = "Time",
      ylab = "Chlorophyll-a",
-     main = "Combined Factors Model")
+     main = "Uncertainty Analysis")
 ## adjust x-axis label to be monthly if zoomed
 #if(diff(time.rng) < 100){ 
 #  axis.Date(1, at=seq(cleaned_data$datetime[time.rng[1]],cleaned_data$datetime[time.rng[2]],by='month'), format = "%Y-%m")
@@ -305,6 +305,8 @@ N.ic.p.ci = apply(N.ic.p,2,quantile,c(0.025,0.5,0.975))
 N.ic.p.d.ci = apply(N.ic.p.d,2,quantile,c(0.025,0.5,0.975))
 N.ic.p.d.pr.ci = apply(N.ic.p.d.pr,2,quantile,c(0.025,0.5,0.975))
 
+N.cols <- c("orange", "blue", "green", "red")
+
 ecoforecastR::ciEnvelope(tail(dates, 30),N.ic.p.d.pr.ci[1,],N.ic.p.d.pr.ci[3,],col= "red")
 ecoforecastR::ciEnvelope(tail(dates, 30),N.ic.p.d.ci[1,],N.ic.p.d.ci[3,],col= "green")
 ecoforecastR::ciEnvelope(tail(dates, 30),N.ic.p.ci[1,],N.ic.p.ci[3,],col= "blue")
@@ -313,5 +315,28 @@ ecoforecastR::ciEnvelope(tail(dates, 30),N.ic.ci[1,],N.ic.ci[3,],col= "orange")
 
 lines(tail(dates, 30),N.ic.ci[2,],lwd=0.5)
 
-legend("topleft", legend = c("IC Uncertainty", "Parameter Uncertainty", "Driver Uncertainty", "Process Uncertainty"), fill =  c("orange", "blue", "green", "red"))
+legend("topleft", legend = c("IC Uncertainty", "Parameter Uncertainty", "Driver Uncertainty", "Process Uncertainty"), fill =  N.cols)
+```
+
+
+
+# Relative Variance
+
+```{r}
+### calculation of variances
+varI     <- apply(N.ic,2,var)
+varIP    <- apply(N.ic.p,2,var)
+varIPD   <- apply(N.ic.p.d,2,var)
+varIPDPR  <- apply(N.ic.p.d.pr,2,var)
+varMat   <- rbind(varI,varIP,varIPD,varIPDPR)
+
+
+## in-sample stacked area plot
+V.pred.rel.in <- apply(varMat[-5,],2,function(x) {x/max(x)})
+plot(forecast_dates,V.pred.rel.in[1,],ylim=c(0,1),type='n',main="Relative Variance",ylab="Proportion of Variance",xlab="time")
+ciEnvelope(forecast_dates,rep(0,ncol(V.pred.rel.in)),V.pred.rel.in[1,],col=N.cols[4])
+ciEnvelope(forecast_dates,V.pred.rel.in[1,],V.pred.rel.in[2,],col=N.cols[3])
+ciEnvelope(forecast_dates,V.pred.rel.in[2,],V.pred.rel.in[3,],col=N.cols[2])
+ciEnvelope(forecast_dates,V.pred.rel.in[3,],V.pred.rel.in[4,],col=N.cols[1])
+legend("topleft",legend=c("Process","Driver","Parameter","InitCond"),col=N.cols,lty=1,lwd=5)
 ```
